# Apexa

apexa-library-integrator/: CHANGELOG.md  Commit message guidelines.md  README.md  pyproject.toml  run.py  sonar-project.properties
apexa-library-integrator/apexa/: __init__.py
apexa-library-integrator/apexa/cli/: __init__.py  cli.py  utils.py
apexa-library-integrator/apexa/cli/client/: __init__.py  commands.py
apexa-library-integrator/apexa/common/: _typings.py  model.py  util.py
apexa-library-integrator/apexa/common/controller/: scraper_controller.py
apexa-library-integrator/apexa/common/publisher/: publisher.py  publisher_dependency.py  registry.py
apexa-library-integrator/apexa/config/: __init__.py  default.py
apexa-library-integrator/apexa/sources/scrappers/: __init__.py  gurobi.py  idera.py  seven_zip.py  tomitribe.py
apexa-library-integrator/tests/: test_apexa.py
